[package]
    name = "aoc_202x"
    version = "0.1.0"
    edition = "2021"
    authors = ["Your Name <your@email.com>"]

[features]
    jaeger = []

[dependencies]
    chrono = "0.4"
    clap = { version = "4", features = ["derive"] }
    itertools = "0.12"
    nom = "7"
    opentelemetry = "0.21.0"
    opentelemetry-otlp = "0.14.0"
    opentelemetry_sdk = { version = "0.21.1", features = [
        "rt-async-std",
        "rt-tokio",
    ] }
    reqwest = { version = "0.11", default-features = false, features = [
        "blocking",
        "rustls-tls",
    ] }
    tokio = { version = "1.34.0", features = ["full"] }
    tracing = "0.1.40"
    tracing-opentelemetry = "0.22.0"
    tracing-subscriber = { version = "0.3.18", features = [
        "env-filter",
        "time",
    ] }
